--- a/src/osgEarth/CMakeLists.txt
+++ b/src/osgEarth/CMakeLists.txt
@@ -63,6 +63,7 @@ set(TARGET_GLSL
     GPUClamping.lib.glsl
     Instancing.glsl
     LineDrawable.glsl
+    MetadataNode.glsl
     WireLines.glsl
     PhongLighting.glsl
     PointDrawable.glsl
@@ -365,6 +366,7 @@ SET(LIB_PUBLIC_HEADERS
     GeometryUtils
     ImageToFeatureLayer
     InstanceCloud
+    MetadataNode
     MVT
     OgrUtils
     OGRFeatureSource
@@ -768,6 +770,7 @@ set(TARGET_SRC
     GeometryUtils.cpp
     ImageToFeatureLayer.cpp
     MVT.cpp
+    MetadataNode.cpp
     OgrUtils.cpp
     OGRFeatureSource.cpp
     PolygonizeLines.cpp
