--- a/src/osgEarthSilverLining/CMakeLists.txt
+++ b/src/osgEarthSilverLining/CMakeLists.txt
@@ -42,13 +42,11 @@ set(TARGET_SRC
 add_osgearth_library(
     TARGET ${LIB_NAME}
     SOURCES ${TARGET_SRC}
-    PUBLIC_HEADERS ${TARGET_H} )
+    PUBLIC_HEADERS ${TARGET_H}
+    FOLDER "NodeKits")
 
-include_directories(
-    ${SILVERLINING_INCLUDE_DIR})
-    
+include_directories(${SILVERLINING_INCLUDE_DIR})
+   
 target_link_libraries(${LIB_NAME}
-    PUBLIC osgEarth ${OPENSCENEGRAPH_LIBRARIES} ${OPENGL_LIBRARIES} OE::SILVERLINING)
-
-# Add this project to the NodeKits solution folder
-set_property( TARGET ${LIB_NAME} PROPERTY FOLDER "NodeKits" )
+    PUBLIC OE::SILVERLINING
+    PRIVATE OpenGL::GL)
