rename Memory header to MemoryUtils to avoid STL namespace conflict

--- a/src/osgEarth/CMakeLists.txt
+++ b/src/osgEarth/CMakeLists.txt
@@ -284,7 +284,7 @@ SET(TARGET_H
     MBTiles
     MeasureTool
     MemCache
-    Memory
+    MemoryUtils
     MeshConsolidator
     MeshFlattener
     MeshSubdivider
@@ -661,7 +661,7 @@ set(TARGET_SRC
     MBTiles.cpp
     MeasureTool.cpp
     MemCache.cpp
-    Memory.cpp
+    MemoryUtils.cpp
     MeshConsolidator.cpp
     MeshFlattener.cpp
     MeshSubdivider.cpp
