Fix libzip cmake configuration

--- a/src/osgEarthDrivers/zip/CMakeLists.txt
+++ b/src/osgEarthDrivers/zip/CMakeLists.txt
@@ -1,17 +1,23 @@
-if(LIBZIP_FOUND AND OSGEARTH_BUILD_ZIP_PLUGIN)
+if(OSGEARTH_BUILD_ZIP_PLUGIN)
 
-    include_directories( ${LIBZIP_INCLUDE_DIRS} )
-    
-    if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-implicit-fallthrough")
+    find_package(libzip)
+
+    if(libzip_FOUND)
+
+        if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-implicit-fallthrough")
+        endif()
+        
+        add_osgearth_plugin(
+            TARGET osgdb_zip
+            HEADERS
+                ZipArchive.h
+            SOURCES
+                ZipArchive.cpp
+                ReaderWriterZIP.cpp)
+                
+        target_link_libraries(osgdb_zip PRIVATE libzip::zip)
+        
     endif()
-    
-    add_osgearth_plugin(
-        TARGET osgdb_zip
-        HEADERS
-            ZipArchive.h
-        SOURCES
-            ZipArchive.cpp
-            ReaderWriterZIP.cpp )
-    
+
 endif()
