Update cmake with verbosity settings

--- a/src/osgEarthDrivers/cache_rocksdb/CMakeLists.txt
+++ b/src/osgEarthDrivers/cache_rocksdb/CMakeLists.txt
@@ -1,28 +1,10 @@
-
-find_package(RocksDB)
+find_package(RocksDB QUIET)
 
 if(RocksDB_FOUND)
 
-    # set(LIB_NAME osgdb_osgearth_cache_rocksdb)
+    message(STATUS "Foudn rocksdb - will build rocks cache")
 
     set(CMAKE_CXX_STANDARD 17)
-
-    # set(TARGET_H_PUBLIC    
-        # RocksDBCacheOptions)
-        
-    # set(TARGET_H
-        # ${TARGET_H_PUBLIC}
-        # RocksDBCache
-        # RocksDBCacheBin
-        # Tracker
-    # )
-    # set(TARGET_SRC 
-        # RocksDBCache.cpp
-        # RocksDBCacheBin.cpp
-        # RocksDBCacheDriver.cpp
-    # )
-    
-    #add_library_as_osgdb_plugin(osgdb_osgearth_cache_rocksdb)
     
     add_osgearth_plugin(
         TARGET 
@@ -38,7 +20,6 @@ if(RocksDB_FOUND)
             RocksDBCacheBin.cpp
             RocksDBCacheDriver.cpp )
             
-    
     target_link_libraries(osgdb_osgearth_cache_rocksdb
         PRIVATE RocksDB::rocksdb RocksDB::rocksdb-shared)    
         
