--- a/src/osgEarthDrivers/draco/CMakeLists.txt
+++ b/src/osgEarthDrivers/draco/CMakeLists.txt
@@ -1,6 +1,7 @@
-find_package(draco)
+find_package(draco QUIET)
 
 if(draco_FOUND)
+    message(STATUS "Found draco")
     add_osgearth_plugin(
         TARGET osgdb_draco
         SOURCES ReaderWriterDraco.cpp
