--- a/src/osgEarthDrivers/gltf/CMakeLists.txt
+++ b/src/osgEarthDrivers/gltf/CMakeLists.txt
@@ -19,6 +19,6 @@ include_directories(
     ${OSGEARTH_EMBEDDED_THIRD_PARTY_DIR}/rapidjson/include/rapidjson )
 
 if (draco_FOUND)
-    include_directories(${draco_INCLUDE_DIRS})
+    #include_directories(${draco_INCLUDE_DIRS})
     target_link_libraries(osgdb_gltf PRIVATE draco::draco)
 endif()
