Add BuildConfig with OSGEARTH_HAVE_MVT cmakedefine so we can access MVT headers externally

--- a/src/osgEarth/CMakeLists.txt
+++ b/src/osgEarth/CMakeLists.txt
@@ -45,7 +45,9 @@ ENDIF(WIN32)
 # set(OSGEARTH_SOVERSION_VALUE "${OSGEARTH_SOVERSION}")
 set(OSGEARTH_VERSION_HEADER "${OSGEARTH_BUILDTIME_INCLUDE_DIR}/osgEarth/Version")
 message(STATUS "Creating ${OSGEARTH_VERSION_HEADER}")
-configure_file(Version.in ${OSGEARTH_VERSION_HEADER})
+
+set(OSGEARTH_BUILDCONFIG_HEADER "${OSGEARTH_BUILDTIME_INCLUDE_DIR}/osgEarth/BuildConfig")
+message(STATUS "Creating ${OSGEARTH_BUILDCONFIG_HEADER}")
 
 # Name all the library files
 SET(LIB_NAME osgEarth)
@@ -948,12 +950,11 @@ ENDIF(GEOS_FOUND)
 
 # Protobuf/MVT?
 IF(Protobuf_FOUND AND Protobuf_PROTOC_EXECUTABLE)
-
-  ADD_DEFINITIONS(-DOSGEARTH_HAVE_MVT)
-  IF (PROTOBUF_USE_DLLS)
-    ADD_DEFINITIONS(-DPROTOBUF_USE_DLLS)
-  ENDIF()
-  LINK_WITH_VARIABLES(${LIB_NAME} Protobuf_LIBRARIES)
+    set(OSGEARTH_HAVE_MVT ON) # for BuildConfig
+    IF (PROTOBUF_USE_DLLS)
+      ADD_DEFINITIONS(-DPROTOBUF_USE_DLLS)
+    ENDIF()
+    LINK_WITH_VARIABLES(${LIB_NAME} Protobuf_LIBRARIES)
 ENDIF()
 
 # ESRI FileGeodatabase?
@@ -979,6 +980,10 @@ IF (TRACY_FOUND)
     INCLUDE_DIRECTORIES(${TRACY_INCLUDE_DIR})
     LINK_WITH_VARIABLES(${LIB_NAME} TRACY_LIBRARY)
 ENDIF(TRACY_FOUND)
+
+# build autogen files
+configure_file(Version.in ${OSGEARTH_VERSION_HEADER})
+configure_file(BuildConfig.in ${OSGEARTH_BUILDCONFIG_HEADER})
 
 OPTION(NRL_STATIC_LIBRARIES "Link osgEarth against static GDAL and cURL, including static OpenSSL, Proj4, JPEG, PNG, and TIFF." OFF)
 if(NOT NRL_STATIC_LIBRARIES)
