CMakeLists: add buildconfig header

--- a/src/osgEarth/CMakeLists.txt
+++ b/src/osgEarth/CMakeLists.txt
@@ -468,6 +468,7 @@ SET(LIB_PUBLIC_HEADERS
     SDF
 
     ${OSGEARTH_VERSION_HEADER}
+    ${OSGEARTH_BUILDCONFIG_HEADER}
 )
 
 if(OSGEARTH_ENABLE_IMGUI)
