Removed unused Zoning enum from buildings. Work on new BuildingsGUI Changes to osgEarthBuildings to support buildings GUI.

--- a/src/osgEarthImGui/CMakeLists.txt
+++ b/src/osgEarthImGui/CMakeLists.txt
@@ -15,6 +15,7 @@ set(IMGUI_SOURCES imgui.cpp imgui_demo.cpp imgui_draw.cpp imgui_tables.cpp imgui
 
 set(STOCK_PANELS
     AnnotationsGUI
+    BuildingsGUI
     CameraGUI
     ContentBrowserGUI
     #DateTimeGUI
