--- a/src/osgEarth/BuildConfig.in
+++ b/src/osgEarth/BuildConfig.in
@@ -13,6 +13,7 @@
 #cmakedefine OSGEARTH_HAVE_SQLITE3
 #cmakedefine OSGEARTH_HAVE_TRACY
 #cmakedefine OSGEARTH_HAVE_SUPERLUMINALAPI
+#cmakedefine OSGEARTH_HAVE_AWS_SDK_CORE
 
 #cmakedefine OSGEARTH_HAVE_CESIUM_NODEKIT
 #cmakedefine OSGEARTH_HAVE_PROCEDURAL_NODEKIT
