--- a/src/osgEarth/Shaders.cpp.in
+++ b/src/osgEarth/Shaders.cpp.in
@@ -18,9 +18,17 @@ namespace osgEarth { namespace Util
         ChonkCulling = "Chonk.Culling.glsl";
         _sources[ChonkCulling] = @Chonk.Culling.glsl@;
 
+        // Decaling headers
+        Decals_Headers = "Decals.h.glsl";
+        _sources[Decals_Headers] = @Decals.h.glsl@;
+
         // Decaling shaders
         Decals = "Decals.glsl";
         _sources[Decals] = @Decals.glsl@;
+
+        // Decaling culling shaders
+        DecalsCulling = "Decals.Culling.glsl";
+        _sources[DecalsCulling] = @Decals.Culling.glsl@;
 
         // Depth Offset
         DepthOffset = "DepthOffset.glsl";
@@ -33,6 +41,14 @@ namespace osgEarth { namespace Util
         // DrawInstanced with attributes
         DrawInstancedAttribute = "DrawInstancedAttribute.glsl";
         _sources[DrawInstancedAttribute] = @DrawInstancedAttribute.glsl@;
+
+        // Frustum Grid Headers
+        FrustumGrid_Headers = "FrustumGrid.h.glsl";
+        _sources[FrustumGrid_Headers] = @FrustumGrid.h.glsl@;
+
+        // Frustum Grid
+        FrustumGridComputer = "FrustumGridComputer.glsl";
+        _sources[FrustumGridComputer] = @FrustumGridComputer.glsl@;
 
         // GPU Clamping
         GPUClamping = "GPUClamping.glsl";
