Expression template: update the Config layout to put the raw expression in the default value slot so it will deserialize propertly from an earth file config layout

--- a/src/osgEarth/Config
+++ b/src/osgEarth/Config
@@ -115,7 +115,7 @@ namespace osgEarth
          *
          * Calling this sets a referrer on this object and its children.
          */
-        void setReferrer(const std::string& value);
+        Config& setReferrer(const std::string& value);
 
         /** Access this object's "relative-to" location. */
         const std::string& referrer() const { return _referrer; }
